Real time collaboration working.

--- a/views/main/index.slim
+++ b/views/main/index.slim
@@ -7,7 +7,7 @@
 - content_for :custom_javascript do
   == js 'jquery-1.10.2.min', 'jqueryFileTree'
 - content_for :custom_coffeescript do
-  == cs 'fileTree', 'firepad'
+  == cs 'firepad', 'fileTree'
 
 - content_for :custom_head_content do
 
