User lists added.

--- a/views/main/index.slim
+++ b/views/main/index.slim
@@ -42,12 +42,14 @@
 
   / Firepad source.
   script src="/firepad/dist/firepad.js"
-  link rel="stylesheet" href="/firepad/dist/firepad.css"
+  link rel="stylesheet" hValueref="/firepad/dist/firepad.css"
+  script src="/firepad/examples/firepad-userlist.js"
+  link rel="stylesheet" href="/firepad/examples/firepad-userlist.css"
 
   style .powered-by-firepad {display:none;}
 
 /-------------------------------------------------------------------------------
-/ Page source.
+/ Page soueValuece.
 /-------------------------------------------------------------------------------
 
 / File tree div.
@@ -102,4 +104,5 @@ select#theme_select
   option xq-light
 
 / Firepad editor.
+div#userlist
 div#firepad
