--- a/views/main/index.slim
+++ b/views/main/index.slim
@@ -53,56 +53,56 @@
 /-------------------------------------------------------------------------------
 
 / File tree div.
-div#file_tree
-
-/ Mode selector.
-select#mode_select
-  option selected="" ruby
-  option javascript
-  option coffeescript
-  option css
-  option haml
-  option htmlembedded
-  option htmlmixed
-  option less
-  option markdown
-  option sass
-  option sql
-  option xml
-  option haml
-
-
-/ Theme selector.
-select#theme_select
-  option selected="" default
-  option 3024-day
-  option 3024-night
-  option ambiance
-  option base16-dark
-  option base16-light
-  option blackboard
-  option cobalt
-  option eclipse
-  option elegant
-  option erlang-dark
-  option lesser-dark
-  option mbo
-  option midnight
-  option monokai
-  option neat
-  option night
-  option paraiso-dark
-  option paraiso-light
-  option rubyblue
-  option solarized dark
-  option solarized light
-  option the-matrix
-  option tomorrow-night-eighties
-  option twilight
-  option vibrant-ink
-  option xq-dark
-  option xq-light
+div#file_tree class="three columns omega"
 
 / Firepad editor.
-div#userlist
-div#firepad
+div#editor class="thirteen columns alpha"
+  / Mode selector.
+  select#mode_select
+    option selected="" ruby
+    option javascript
+    option coffeescript
+    option css
+    option haml
+    option htmlembedded
+    option htmlmixed
+    option less
+    option markdown
+    option sass
+    option sql
+    option xml
+    option haml
+
+
+  / Theme selector.
+  select#theme_select
+    option selected="" default
+    option 3024-day
+    option 3024-night
+    option ambiance
+    option base16-dark
+    option base16-light
+    option blackboard
+    option cobalt
+    option eclipse
+    option elegant
+    option erlang-dark
+    option lesser-dark
+    option mbo
+    option midnight
+    option monokai
+    option neat
+    option night
+    option paraiso-dark
+    option paraiso-light
+    option rubyblue
+    option solarized dark
+    option solarized light
+    option the-matrix
+    option tomorrow-night-eighties
+    option twilight
+    option vibrant-ink
+    option xq-dark
+    option xq-light
+  div#userlist
+  div#firepad
