--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,7 +9,7 @@ html lang="en"
     == yield_content :custom_head_content
 
     / Include stylesheets
-    == css 'skeleton'
+    == css 'skeleton', 'style'
     == yield_content :custom_stylesheets
 
     / Include javascript
