--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -6,18 +6,14 @@ body{
   height:100%;
 }
 
-.container{
-  height:100%;
-}
-
 #file_tree{
   overflow:auto;
-  height:100%;
+  height:500px;
   box-shadow: inset 0px 0px 5px #888888;
 }
 
 #editor{
-  height:100%;
+  height:500px;
 }
 
 #firepad{
