File saving added.

--- a/views/project/edit.slim
+++ b/views/project/edit.slim
@@ -5,7 +5,7 @@
 - content_for :custom_stylesheets do
   == css 'jqueryFileTree'
 - content_for :custom_javascript do
-  == js 'jquery-1.10.2.min', 'jqueryFileTree'
+  == js 'jquery-1.10.2.min', 'jqueryFileTree', 'shortcut'
 - content_for :custom_coffeescript do
   == cs 'firepad', 'fileTree'
 
