--- a/views/project/git.slim
+++ b/views/project/git.slim
@@ -12,7 +12,23 @@
         == submit 'Commit'
 
 == form "/project/git/push/#{@project.name}", :post
-  == submit 'Push'
+  h2 Push
+  table.form_data
+    tr
+      td.label_form
+        label for="username" Username:
+      td
+        == input :push, :username
+    tr
+      td.label_form
+        label for="password" Password:
+      td
+        == password :push, :password
+
+    tr
+      td
+      td class="submit_btn"
+        == submit 'Push'
 
 == form "/project/git/pull/#{@project.name}", :post
   == submit 'Pull'
