--- a/views/_navbar.slim
+++ b/views/_navbar.slim
@@ -4,6 +4,10 @@ div#navbar class="navigation sixteen columns alpha omega"
       div#userinfo
         form action="/session/logout"
           input type="submit" value="Logout"
+        form action="/project/list"
+          input type="submit" value="Projects"
+        form action="/project/create"
+          input type="submit" value="Add Project"
         span.username #{@current_user.username}
     - else
       div#not_logged
